--- a/docs/scss/components/_slider.scss
+++ b/docs/scss/components/_slider.scss
@@ -1,11 +1,13 @@
 /* -------------------------------------------------- Общие стили слайдеров */
 /* обращение к дорожке со слайдами */
-.owl-carousel .owl-stage-outer {
+.owl-carousel .owl-stage-outer,
+.owl-carousel-two .owl-stage-outer {
     margin: 0px 0px 50px 0px;
 }
 /* стилизация пагинации (точек) */
 /* Обращение к обёртке точек */
-.owl-carousel .owl-dots{
+.owl-carousel .owl-dots,
+.owl-carousel-two .owl-dots{
     float: left;
     display: flex;
     height: 60px;
@@ -14,7 +16,8 @@
     }
 }
 /* обращение к обёртке каждой точки */
-.owl-carousel .owl-dots .owl-dot{
+.owl-carousel .owl-dots .owl-dot,
+.owl-carousel-two .owl-dots .owl-dot{
     background: var(--accent);
     &:not(:last-child){
         margin: 0px 40px 0px 0px;
@@ -25,6 +28,8 @@
     height: 10px;
     opacity: 0.4;
     border-radius: 50%;
+    border: 0;
+    padding: 0;
     cursor: pointer;
     transition: all .3s ease-out;
     /* обращение к активной точке */
@@ -42,7 +47,8 @@
 }
 /* Стилизация стрелок */
 /* обращение к обёртке стрелок */
-.owl-carousel .owl-nav{
+.owl-carousel .owl-nav,
+.owl-carousel-two .owl-nav{
     float: right;
     @media (max-width: 992px) {
         width: 100%;
@@ -52,17 +58,21 @@
     }
 }
 /* обращение к обёртке стрелки назад и вперёд */
-.owl-carousel .owl-nav .owl-prev, .owl-carousel .owl-nav .owl-next {
+.owl-carousel .owl-nav .owl-prev,
+.owl-carousel .owl-nav .owl-next,
+.owl-carousel-two .owl-nav .owl-prev,
+.owl-carousel-two .owl-nav .owl-next {
     width: 60px;
     height: 60px;
     border-radius: 0;
+    border: 0;
+    padding: 0;
     cursor: pointer;
     transition: all .3s ease-out;
     @media (max-width: 992px) {
         width: 120px;
         margin: 0 30px;
     }
-    /* спан внутри затирается картинками через js */
 }
 /* ----------------------------------------------- // Общие стили слайдеров */
 
@@ -77,7 +87,8 @@
     background: var(--white);
 }
 /* обращение к обёртке стрелки назад и вперёд */
-.fullscreen__slider.owl-carousel .owl-nav .owl-prev, .fullscreen__slider.owl-carousel .owl-nav .owl-next {
+.fullscreen__slider.owl-carousel .owl-nav .owl-prev,
+.fullscreen__slider.owl-carousel .owl-nav .owl-next {
     background: rgb(255, 255, 255, 0.2);
     &:hover {
         background: rgb(255, 255, 255, 0.4);
@@ -85,17 +96,9 @@
 }
 /* ----------------------------------------------- // Стили слайдера Header */
 
-/* -------------------------------------------------- Стили слайдера Clients */
-.clients__slider.owl-carousel .owl-nav .owl-prev, .clients__slider.owl-carousel .owl-nav .owl-next {
-    background: rgb(0, 95, 163, 0.2);
-    &:hover {
-        background: var(--accent);
-    }
-}
-/* ----------------------------------------------- // Стили слайдера Clients */
-
 /* -------------------------------------------------- Стили слайдера Reviews */
-.reviews__slider.owl-carousel .owl-nav .owl-prev, .reviews__slider.owl-carousel .owl-nav .owl-next {
+.reviews__slider.owl-carousel .owl-nav .owl-prev,
+.reviews__slider.owl-carousel .owl-nav .owl-next {
     background: rgb(0, 95, 163, 0.2);
     &:hover {
         background: var(--accent);
@@ -103,7 +106,24 @@
 }
 /* ----------------------------------------------- // Стили слайдера Reviews */
 
-/* Для очистки потоков обтекания блоков пагинации и навигации слайдера */
+/* -------------------------------------------------- Стили слайдера Clients */
+/* обращение к дорожке со слайдами */
+.owl-carousel-two .owl-stage-outer {
+    overflow: hidden;
+}
+.owl-carousel-two .owl-stage{
+    display: flex;
+}
+.clients__slider.owl-carousel-two .owl-nav .owl-prev,
+.clients__slider.owl-carousel-two .owl-nav .owl-next {
+    background: rgb(0, 95, 163, 0.2);
+    &:hover {
+        background: var(--accent);
+    }
+}
+/* ----------------------------------------------- // Стили слайдера Clients */
+
+/* Очистка потоков обтекания блоков пагинации и навигации слайдера */
 .fullscreen__slider::after, .clients__slider::after, .reviews__slider::after {
     content: '';
     clear: both;
